# isbn-viewer

./: Cargo.toml  index.html
src/: components.rs  main.rs
src/components/: card.rs  icons.rs
src/components/card/: card.css  card.rs
src/components/icons/: dimensions_icon.rs  pages_icon.rs
src/data_example/: fisica.json  messias de duna.json  porque as naçoes.json  senai.json
src/types/: book.rs
