[package]
name = "isbn-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.83"